8281615: Deadlock caused by jdwp agent

Backport-of: e1060bee2adb9f2e07ca09309d0f89132db30f28